--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <Header>
+    <h1>Portfolio</h1>
+  </Header>
 </head>
 <body>
-  
+  <nav>
+    <a href="#">About me</a>
+    <a href="#">Projects</a>
+    <a href="#">Contact</a>
+  </nav>
+  <main>
+    <section>
+      <h2>About me</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, dolorem repellat dolore iusto expedita animi perspiciatis natus quibusdam vel doloribus. Culpa quod libero excepturi at illo alias nesciunt quasi magni!</p>
+      </section> 
+      <section>
+        <h2>Projects</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, dolorem repellat dolore iusto expedita animi perspiciatis natus quibusdam vel doloribus. Culpa quod libero excepturi at illo alias nesciunt quasi magni!</p>
+        </section>
+        <h2>Contact</h2>
+        <form action="">
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email">
+          <label for="message">Message</label>
+        </form>
+      </section>
+  </main>
+  <footer>footer by erick</footer>
 </body>
 </html>
