movedf header tag outside head tag and completed contact section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <Header>
-    <h1>Portfolio</h1>
-  </Header>
+  <meta charset="UTF-8">
+  <title>Portfolio</title>
 </head>
 <body>
+  <header>
+    <h1>Portfolio</h1>
+  </header>
   <nav>
     <a href="#">About me</a>
     <a href="#">Projects</a>
@@ -15,20 +17,23 @@
     <section>
       <h2>About me</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, dolorem repellat dolore iusto expedita animi perspiciatis natus quibusdam vel doloribus. Culpa quod libero excepturi at illo alias nesciunt quasi magni!</p>
-      </section> 
-      <section>
-        <h2>Projects</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, dolorem repellat dolore iusto expedita animi perspiciatis natus quibusdam vel doloribus. Culpa quod libero excepturi at illo alias nesciunt quasi magni!</p>
-        </section>
-        <h2>Contact</h2>
-        <form action="">
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email">
-          <label for="message">Message</label>
-        </form>
-      </section>
+    </section>
+    <section>
+      <h2>Projects</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, dolorem repellat dolore iusto expedita animi perspiciatis natus quibusdam vel doloribus. Culpa quod libero excepturi at illo alias nesciunt quasi magni!</p>
+    </section>
+    <section>
+      <h2>Contact</h2>
+      <form action="">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email">
+        <label for="message">Message</label>
+        <textarea id="message" name="message"></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </section>
   </main>
   <footer>footer by erick</footer>
 </body>
