Prepare portfolio for Netlify deployment

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="project-card">
           <img src="assets/project2-thumbnail.jpg" alt="Screenshot of Project 2">
           <div class="project-content">
-            <h3></h3>
+            <h3>Payroll4Dummies</h3>
             <p>Short description about the project, the goal, and technologies used.</p>
             <a href="#" class="project-link">View Project</a>
           </div>
@@ -91,8 +91,8 @@
   </main>
   <footer>
     <div class="social-links">
-      <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+      <a href="https://linkedin.com/in/ErickFierro0413" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/efierr" target="_blank">GitHub</a>
     </div>
     footer by erick</footer>
 </body>
