added photos for both apps

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2>Projects</h2>
       <div class="projects-grid">
         <div class="project-card">
-          <img src="assets/project1-thumbnail.jpg" alt="Screenshot of Project 1">
+          <img src="assets/dejafood.jpeg" alt="Screenshot of Project 1">
           <div class="project-content">
             <h3>DEJAFOOD</h3>
             <p>DejaFood isn’t just a recipe organizer-it’s your family’s digital cookbook and memory box, all in one. Store your favorite recipes with a personal touch: add video clips of you and your loved ones cooking together, laughing, and making memories. Every dish becomes a story, every recipe a time capsule you can revisit forever.</p>
@@ -47,7 +47,7 @@
           </div>
         </div>
         <div class="project-card">
-          <img src="assets/project2-thumbnail.jpg" alt="Screenshot of Project 2">
+          <img src="assets/fierro.jpeg" alt="Screenshot of Project 2">
           <div class="project-content">
             <h3>FIERRO</h3>
             <p> Fierro is more than just a workout app-it’s your gateway to a global fitness community and your personal progress tracker. Whether you’re just starting out or pushing for new goals, Fierro helps you discover exercises, learn from real people, and stay on top of your fitness journey.
